--- a/index.html
+++ b/index.html
@@ -7,10 +7,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <script src="app.js" defer></script>
-        <title>Document</title>
+        <title>Calculator</title>
     </head>
 
     <body>
+
+        <div id="calculator">
+            <div id="display"></div>
+            <div id="keyboard">
+                <div class="operator">+</div>
+                <div class="operator">-</div>
+                <div class="operator">×</div>
+                <div class="operator">÷</div>
+                <div class="digit">7</div>
+                <div class="digit">8</div>
+                <div class="digit">9</div>
+                <div id="equals">=</div>
+                <div class="digit">4</div>
+                <div class="digit">5</div>
+                <div class="digit">6</div>
+                <div class="digit">1</div>
+                <div class="digit">2</div>
+                <div class="digit">3</div>
+                <div class="digit" id="zero">0</div>
+                <div class="digit">.</div>
+                <div class="digit">C</div>
+            </div>
 
     </body>
 
