--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <div id="calculator">
-            <div id="display"></div>
+            <div id="display">974</div>
             <div id="keyboard">
                 <div class="operator">+</div>
                 <div class="operator">-</div>
