--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <div id="calculator">
-            <div id="display">974</div>
+            <div id="display"></div>
             <div id="keyboard">
                 <div class="operator">+</div>
                 <div class="operator">-</div>
@@ -30,8 +30,8 @@
                 <div class="digit">2</div>
                 <div class="digit">3</div>
                 <div class="digit" id="zero">0</div>
-                <div class="digit">.</div>
-                <div class="digit">C</div>
+                <div id="point">.</div>
+                <div id="cancel">C</div>
             </div>
 
     </body>
