--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <body>
 
         <div id="calculator">
-            <div id="display"></div>
+            <div id="display">0</div>
             <div id="keyboard">
                 <div class="operator">+</div>
                 <div class="operator">-</div>
-                <div class="operator">×</div>
+                <div class="operator">*</div>
                 <div class="operator">÷</div>
                 <div class="digit">7</div>
                 <div class="digit">8</div>
@@ -31,7 +31,7 @@
                 <div class="digit">3</div>
                 <div class="digit" id="zero">0</div>
                 <div id="point">.</div>
-                <div id="cancel">C</div>
+                <div id="cancel">AC</div>
             </div>
 
     </body>
