--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="digit">3</div>
                 <div class="digit" id="zero">0</div>
                 <div id="point">.</div>
-                <div id="cancel">AC</div>
+                <div id="clear">AC</div>
             </div>
 
     </body>
