Add more animations and add "undo" button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="digit" id="zero">0</div>
                 <div id="point">.</div>
                 <div id="clear">AC</div>
+                <div id="undo">C</div>
             </div>
 
     </body>
